/*
Copyright 2021 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package dapr.proto.components.v1;

import "google/protobuf/empty.proto";
import "dapr/proto/common/v1/common.proto";
import "dapr/proto/components/v1/shared.proto";

option go_package = "github.com/dapr/dapr/pkg/proto/components/v1;components";

// Store service provides a gRPC interface for state store components.
service StateStore {
  rpc Init(MetadataRequest) returns (google.protobuf.Empty) {}

  rpc Features(google.protobuf.Empty) returns (FeaturesResponse) {}

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}

  rpc Get(GetRequest) returns (GetResponse) {}

  rpc Set(SetRequest) returns (google.protobuf.Empty) {}

  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc BulkDelete(BulkDeleteRequest) returns (google.protobuf.Empty) {}

  rpc BulkGet(BulkGetRequest) returns (BulkGetResponse) {}

  rpc BulkSet(BulkSetRequest) returns (google.protobuf.Empty) {}
}



message GetRequest {
  string key = 1;
  map<string, string> metadata = 2;
  dapr.proto.common.v1.StateOptions.StateConsistency consistency = 3;
}

message GetResponse {
  bytes data = 1;
  dapr.proto.common.v1.Etag etag = 2;
  map<string, string> metadata = 3;
}

message DeleteRequest {
  string key = 1;
  dapr.proto.common.v1.Etag etag = 2;
  map<string, string> metadata = 3;
  dapr.proto.common.v1.StateOptions options = 4;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
  dapr.proto.common.v1.Etag etag = 3;
  map<string, string> metadata = 4;
  dapr.proto.common.v1.StateOptions options = 5;
}

message BulkDeleteRequest {
  repeated DeleteRequest items = 1;
}

message BulkGetRequest {
  repeated GetRequest items = 1;
}

message BulkStateItem {
  string key = 1;
  bytes data = 2;
  dapr.proto.common.v1.Etag etag = 3;
  string error = 4;
  map<string, string> metadata = 5;
}

message BulkGetResponse {
  repeated BulkStateItem items = 1;
  bool got = 2;
}

message BulkSetRequest {
  repeated SetRequest items = 1;
}

